Fix issue in navigation collapsed mode logo was hidden instead of visible

--- a/css/style.css
+++ b/css/style.css
@@ -409,7 +409,7 @@ small { font-size: 80%; }
 	width:60px;
 }
 
-.top-header .logo.collapsed a svg {
+.top-header .logo.collapsed svg {
 	margin:15px 0 0;
 	display: inline-block;
 }
